--- a/.github/workflows/approve-pr.yaml
+++ b/.github/workflows/approve-pr.yaml
@@ -72,13 +72,13 @@ jobs:
       - name: Approve pull request
         uses: hmarr/auto-approve-action@v2.0.0
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
 
   approve-other-bots-pr:
     name: "Approve other bots' PR"
     runs-on: ubuntu-latest
     if: >-
-      github.event.pull_request.user.login == 'github-actions[bot]' &&
+      github.event.pull_request.user.login == 'branoholy-bot' &&
       (
         github.head_ref == 'deps-update-lock-file' ||
         github.head_ref == 'deps-update-node' ||
@@ -98,4 +98,4 @@ jobs:
       - name: Approve pull request
         uses: hmarr/auto-approve-action@v2.0.0
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
