--- a/.github/workflows/request-pr-review.yaml
+++ b/.github/workflows/request-pr-review.yaml
@@ -24,5 +24,5 @@ jobs:
       - name: Request pull request review
         uses: kunihiko-t/review-request-action@v0.1.3
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
           reviewers: branoholy
