--- a/.github/workflows/update-dist.yaml
+++ b/.github/workflows/update-dist.yaml
@@ -33,6 +33,6 @@ jobs:
           paths: 'dist/index.js, dist/index.js.LICENSE.txt'
           branch: build-update-dist
           delete-branch: true
-          commit-message: 'BUILD: Update dist'
-          commit-token: ${{ secrets.GITHUB_TOKEN }}
-          body: Automatic update of `dist/index.js`.
+          commit.message: 'BUILD: Update dist'
+          commit.token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request.body: Automatic update of `dist/index.js`.
