--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:dist": "npm run build && rm -rf dist/ && cp -r build/ dist/",
     "start": "node build/index.js",
     "start:dist": "node dist/index.js",
-    "lint": "eslint 'src/**'",
+    "lint": "eslint 'src/**' 'tests/**'",
     "lint:fix": "npm run lint -- --fix",
     "lint:all": "eslint '**' && prettier --check '**'",
     "lint:staged": "lint-staged",
@@ -28,8 +28,15 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
-    "stryker": "stryker run",
-    "postinstall": "git config --local core.hooksPath hooks"
+    "test:e2e": "jest --config jest-e2e.config.js",
+    "test:e2e:coverage": "npm run test:e2e -- --coverage",
+    "test:e2e:watch": "npm run test:e2e -- --watch",
+    "test:unit": "jest --config jest-unit.config.js",
+    "test:unit:coverage": "npm run test:unit -- --coverage",
+    "test:unit:watch": "npm run test:unit -- --watch",
+    "stryker:e2e": "stryker run stryker-e2e.conf.js",
+    "stryker:unit": "stryker run stryker-unit.conf.js",
+    "postinstall": "[ -d .git ] && git config --local core.hooksPath hooks || echo 'Info: Git hooks not set outside a git repository.'"
   },
   "dependencies": {
     "@actions/core": "1.2.6",
@@ -43,8 +50,8 @@
     "@babel/node": "7.12.17",
     "@babel/preset-env": "7.12.17",
     "@babel/preset-typescript": "7.12.17",
-    "@stryker-mutator/core": "4.0.0",
-    "@stryker-mutator/jest-runner": "4.1.1",
+    "@stryker-mutator/core": "4.4.1",
+    "@stryker-mutator/jest-runner": "4.4.1",
     "@types/btoa": "1.2.3",
     "@types/diff": "5.0.0",
     "@types/jest": "26.0.20",
@@ -65,6 +72,7 @@
     "eslint-plugin-simple-import-sort": "7.0.0",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
+    "nock": "13.0.7",
     "node-fetch": "2.6.1",
     "prettier": "2.2.1",
     "typescript": "4.1.5",
