--- a/.github/workflows/auto-merge-pr.yaml
+++ b/.github/workflows/auto-merge-pr.yaml
@@ -19,9 +19,7 @@ jobs:
           query: |
             mutation enablePullRequestAutoMerge($id: ID!) {
               enablePullRequestAutoMerge(input: {pullRequestId: $id}) {
-                pullRequest {
-                  id
-                }
+                clientMutationId
               }
             }
           id: ${{ github.event.pull_request.node_id }}
