--- a/.github/workflows/update-dist.yaml
+++ b/.github/workflows/update-dist.yaml
@@ -25,11 +25,12 @@ jobs:
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit == false
         run: npm ci
-      - name: Update dist
+      - name: Update the dist folder
+        run: 'npm run build:dist'
+      - name: Create a pull request with the updated files
         uses: branoholy/update-files-action@develop
         with:
           token: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
-          commands: 'npm run build:dist'
           paths: 'dist/index.js, dist/index.js.LICENSE.txt'
           branch: build-update-dist
           delete-branch: true
