--- a/.github/workflows/update-lock-file.yaml
+++ b/.github/workflows/update-lock-file.yaml
@@ -16,11 +16,12 @@ jobs:
         uses: actions/setup-node@v2.1.5
         with:
           node-version: 15.11.0
-      - name: Update lock file
+      - name: Update the lock file
+        run: rm package-lock.json && npm i
+      - name: Create a pull request with the updated file
         uses: branoholy/update-files-action@develop
         with:
           token: ${{ secrets.BRANOHOLY_BOT_TOKEN }}
-          commands: 'rm package-lock.json, npm i'
           paths: package-lock.json
           branch: deps-update-lock-file
           delete-branch: true
